tests/old/pass/integers/u128/min_fail.leo
function main() {
    const a: u128 = -1;
}