tests/old/fail/syntax/semicolon.leo
function main() {
    const a = 0
}